# NetworkProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  TFTP_Client.c  TFTP_Client.h  TFTP_Server  TFTP_Server.c  TFTP_Server.h  UDP_File_Transfer.h  UDP_Logger.c  UDP_Logger.h  UDP_Utils.h  client  error_handling_TFTP.c  lol.txt  server
